--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,19 @@
         </div>
       </div>
     </div>
+    <div class="header-fixed">
+      <div class="header-container">
+        <h1 class="site-title">{{ site.name }}</h1>
+        <ul class="site-menu">
+          <li><a href="/" data-content="&#xf015;"><span><i class="icon-home icon-large"></i>&nbsp;HOME</span></a></li>
+          <li><a href="https://github.com/{{ site.author.github }}" target="_blank" data-content="&#xf09b;"><span><i class="icon-github icon-large"></i>&nbsp;GITHUB</span></a></li>
+          <li><a href="/about" data-content="&#xf118;"><span><i class="icon-smile icon-large"></i>&nbsp;ABOUT</span></a></li>
+        </ul>
+        <div class="site-control">
+          <a href="/atom.xml" class="control-rss"><i class="icon-rss"></i>&nbsp;Subscribe</a>
+        </div>
+      </div>
+    </div>
     <div class="content">
       <div class="content-container">
         {{ content }}
