--- a/_src/styles/header.scss
+++ b/_src/styles/header.scss
@@ -10,6 +10,11 @@ $header-height: 120px;
   z-index: 20;
   top: 0;
   left: 0;
+  @include transition(opacity 0.3s ease);
+
+  &.hide {
+    opacity: 0;
+  }
 }
 
 .header-container {
