--- a/_src/styles/global.scss
+++ b/_src/styles/global.scss
@@ -1,10 +1,7 @@
 @import "compass/reset";
 @import "common";
 
-// @import url(http://fonts.googleapis.com/css?family=Fauna+One);
-// @import url(http://fonts.googleapis.com/css?family=Maven+Pro);
-@import url(http://fonts.googleapis.com/css?family=Arvo);
-// @import url(http://fonts.googleapis.com/css?family=Voces);
+@import url(http://fonts.googleapis.com/css?family=Metrophobic);
 
 body {
   background-color: $color-rule-2;
