--- a/_src/styles/post.scss
+++ b/_src/styles/post.scss
@@ -9,15 +9,25 @@ $post-code-back: $color-rule-2;
   }
 }
 
-.post {
-  border-bottom-width: 2px;
-  z-index: 11;
+// maybe will use later
+// @mixin title-text-shadow {
+//   $shadow-text: "";
+//   @for $i from 1 through 5 {
+//     @if $i != 1 {
+//       $shadow-text: $shadow-text + ","
+//     }
+//     $shadow-text: $shadow-text + $i + "px " + $i + "px " + (0.5 + $i * 0.5) + "px " + rgba(#666, 1.2 - (0.2 * $i));
+//   }
+//   @include text-shadow(unquote($shadow-text));
+// }
 
+.post {
   .post-title {
     display: block;
     background-color: $color-rule-5;
     @include border-radius(10px 10px 0 0);
     padding: 0 $post-padding;
+    overflow: hidden;
 
     > h2 {
       display: inline;
@@ -32,6 +42,8 @@ $post-code-back: $color-rule-2;
       color: $light-font-color;
       font-size: 16px;
     }
+
+    @include transition(all 0.3s ease);
   }
 
   .post-content {
