--- a/_src/styles/post.scss
+++ b/_src/styles/post.scss
@@ -9,23 +9,11 @@ $post-code-back: $color-rule-2;
   }
 }
 
-// maybe will use later
-// @mixin title-text-shadow {
-//   $shadow-text: "";
-//   @for $i from 1 through 5 {
-//     @if $i != 1 {
-//       $shadow-text: $shadow-text + ","
-//     }
-//     $shadow-text: $shadow-text + $i + "px " + $i + "px " + (0.5 + $i * 0.5) + "px " + rgba(#666, 1.2 - (0.2 * $i));
-//   }
-//   @include text-shadow(unquote($shadow-text));
-// }
-
 .post {
   .post-title {
     display: block;
     background-color: $color-rule-5;
-    @include border-radius(10px 10px 0 0);
+    @include border-radius(3px 3px 0 0);
     padding: 0 $post-padding;
     overflow: hidden;
 
@@ -35,6 +23,8 @@ $post-code-back: $color-rule-2;
       font-size: 30px;
       line-height: 2.5em;
       font-weight: bold;
+
+      @include transition(text-shadow 0.3s ease);
     }
 
     > span {
@@ -42,13 +32,17 @@ $post-code-back: $color-rule-2;
       color: $light-font-color;
       font-size: 16px;
     }
+  }
 
-    @include transition(all 0.3s ease);
+  a.post-title:hover {
+    > h2 {
+      @include text-shadow(0 0 5px);
+    }
   }
 
   .post-content {
     background-color: white;
-    @include border-radius(0 0 10px 10px);
+    @include border-radius(0 0 3px 3px);
     padding: 20px $post-padding;
   }
 }
